# SDL_Default

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  SDL_Default.sublime-project  SDL_Default.sublime-workspace
.cache/clangd/index/: GameManager.cpp.5A924B2A7B7B43FA.idx  GameManager.h.8DA6532038834C61.idx  Player.cpp.7CF8EE85F5054284.idx  Player.h.972897CCC2C51C1A.idx  Tile.cpp.5CE3C74E392D5263.idx  Tile.h.E85CA4F4B8CF0249.idx  main.cpp.5EF5126BAEAF974D.idx
include/: GameManager.h
src/: GameManager.cpp  main.cpp
